<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="335dp"
        android:layout_height="134dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coiny"
        android:text="@string/icerik"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="164dp"
        android:layout_height="121dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cark" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/cevirKazan"
        android:textColor="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/cozKazan"
        android:textColor="@color/white1"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/autour_one"
            android:text="@string/baslik"
            android:textColor="@color/grey"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="13dp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="344dp"
        android:layout_height="195dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/fincan" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="188dp"
        android:layout_height="121dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:srcCompat="@drawable/bulmaca" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="144dp"
        android:layout_height="133dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/burc" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:backgroundTint="@color/purple1"
        android:text="@string/falBak"
        android:textColor="@color/white1"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple1"
        android:text="@string/burcYorumu"
        android:textColor="@color/white1"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

</androidx.constraintlayout.widget.ConstraintLayout>